modify the html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <nav>
                 <i class="fas fa-bars toogle-menu"></i>
                 <ul>
-                    <li><a href="#services" class="Active">services</a></li>
+                    <li><a href="#home" class="Active">Home</a></li>
+                    <li><a href="#services">services</a></li>
                     <li><a href="#portfolio">portfolio</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#pricing">pricing</a></li>
