modify the html

--- a/index.html
+++ b/index.html
@@ -150,56 +150,56 @@
         </div>
         <div class="imgs-container">
             <div class="box">
-                <img src="/imgs/portfolio-1.jpg" alt="">
+                <img src="imgs/portfolio-1.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/portfolio-2.jpg" alt="">
+                <img src="imgs/portfolio-2.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/portfolio-3.jpg" alt="">
+                <img src="imgs/portfolio-3.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/portfolio-4.jpg" alt="">
+                <img src="imgs/portfolio-4.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/portfolio-2.jpg" alt="">
+                <img src="imgs/portfolio-2.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/portfolio-1.jpg" alt="">
+                <img src="imgs/portfolio-1.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/portfolio-3.jpg" alt="">
+                <img src="imgs/portfolio-3.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/portfolio-4.jpg" alt="">
+                <img src="imgs/portfolio-4.jpg" alt="">
                 <div class="caption">
                     <h4>awesome image</h4>
                     <p>Photography</p>
@@ -211,7 +211,7 @@
     <!-- END PORTFOLIO -->
     <!-- START VIDEO -->
     <div class="video">
-        <video src="/imgs/170216A_054_GannetFlying_1080p.mp4" autoplay muted loop></video>
+        <video src="imgs/170216A_054_GannetFlying_1080p.mp4" autoplay muted loop></video>
     
     <div class="text">
         <h2>Super Awesome Video Here</h2>
